--- a/public/package.json
+++ b/public/package.json
@@ -8,6 +8,8 @@
   },
   "devDependencies": {},
   "scripts": {
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
